# gamesave-manager

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
core/: Cargo.toml  tauri.conf.json
core/capabilities/: default.json
core/icons/: icon.icns
core/src/: lib.rs  main.rs
core/src/alist/: auth.rs  fs.rs  mod.rs  types.rs
core/src/backup/: full.rs  incremental.rs  manifest.rs  mod.rs  remote_manifest.rs  restore.rs  sync.rs
core/src/config/: mod.rs  model.rs
core/src/game/: db.rs  icon_extractor.rs  metadata.rs  mod.rs  pcgw.rs  process_watcher.rs  registry.rs  scanner.rs
core/src/storage/: mod.rs
core/src/utils/: hash.rs  mod.rs  path.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AlistBrowser.tsx  AppShell.tsx  BackupDialog.tsx  GameCard.tsx  RestoreDialog.tsx  SettingsPanel.tsx  StorageBrowser.tsx  ToastContainer.tsx
ui/src/hooks/: useAlist.ts  useBackup.ts  useGames.ts
ui/src/pages/: GameDbPage.tsx  GameDetailPage.tsx  HomePage.tsx  SettingsPage.tsx
ui/src/services/: tauri.ts
ui/src/store/: appStore.ts
